<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <EditText
            android:id="@+id/edit_text_hours"
            style="@style/Theme.Timer.TimeUnit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:hint="@string/zero"
            android:autofillHints="no"
            android:onClick="selectAllText"
            android:imeOptions="actionNext"
            android:layout_marginEnd="@dimen/margin_between_numbers"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/edit_text_minutes"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/colon1"
            style="@style/Theme.Timer.TimeColon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/colon"
            app:layout_constraintStart_toEndOf="@id/edit_text_hours"
            app:layout_constraintEnd_toStartOf="@id/edit_text_minutes"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <EditText
            android:id="@+id/edit_text_minutes"
            style="@style/Theme.Timer.TimeUnit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:hint="@string/zero"
            android:autofillHints="no"
            android:onClick="selectAllText"
            android:imeOptions="actionNext"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/colon2"
            style="@style/Theme.Timer.TimeColon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/colon"
            app:layout_constraintStart_toEndOf="@id/edit_text_minutes"
            app:layout_constraintEnd_toStartOf="@id/edit_text_seconds"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <EditText
            android:id="@+id/edit_text_seconds"
            style="@style/Theme.Timer.TimeUnit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/five"
            android:hint="@string/zero"
            android:autofillHints="no"
            android:onClick="selectAllText"
            android:imeOptions="actionDone"
            android:layout_marginStart="@dimen/margin_between_numbers"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/edit_text_minutes"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floating_button_start"
            style="@style/Theme.Timer.FloatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_resume_48p"
            android:tint="?attr/colorSecondary"
            android:onClick="onTimerStart"
            android:contentDescription="@string/start"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floating_button_stop"
            style="@style/Theme.Timer.FloatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_stop_48p"
            android:tint="?attr/colorSecondary"
            android:onClick="onTimerStop"
            android:contentDescription="@string/stop"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/floating_button_start"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>